--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,24 @@ a {
     cursor: pointer;
 }
 
-h1{
+h1 {
     font-size: 52px;
     color: rgb(67, 68, 78);
 }
+
 p {
     font-size: 20px;
     color: rgb(67, 68, 78);
 }
-button{
+
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+button {
     border-radius: 4px;
     font: bold 14px / 16px "proxima-nova", helvetica, arial, sans-serif;
     outline: none;
@@ -33,12 +42,41 @@ button{
 
 .main-header {
     padding: 12px 16px;
+    border-bottom: 1px solid #ddd;
 }
 
 
 .main-nav-mobile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 
-    @media (min-width: 380px) {
+    ul {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+
+        img {
+            margin-top: 5px;
+        }
+    }
+
+    .header-logo {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+
+        p {
+            margin: 0;
+            font-size: 18px;
+            color: var(--color-secondary);
+        }
+    }
+
+    @media (min-width: 500px) {
         display: none;
     }
 }
@@ -47,18 +85,37 @@ button{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    gap: 26px;
+    padding: 0 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 
-    @media (max-width: 380px) {
+    ul {
+        display: flex;
+        gap: 15px;
+
+        img {
+            margin-top: 5px;
+        }
+    }
+
+    .header-logo {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+
+        p {
+            margin: 0;
+            font-size: 18px;
+
+        }
+    }
+
+    @media (max-width: 500px) {
         display: none;
     }
 }
 
-
-
-
 .hero {
-    padding: 50px;
+    padding: min(5em, 8%);
     text-align: center;
 }
