--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,27 @@ a {
 }
 
 h1 {
-    font-size: 52px;
+    font-size: var(--textsize-xlarge);
+    color: var(--primary-text-color);
+}
+
+h2 {
+    font-size: var(--textsize-large);
+    color: var(--primary-text-color);
+}
+
+h3 {
+    font-size: var(--textsize-medium);
+    color: var(--primary-text-color);
+}
+
+h4 {
+    font-size: var(--textsize-medium);
+    color: var(--primary-text-color);
+}
+
+h5 {
+    font-size: var(--textsize-medium);
     color: var(--primary-text-color);
 }
 
@@ -41,7 +61,6 @@ button {
 }
 
 .main-header {
-    padding: 12px 16px;
     border-bottom: 1px solid #ddd;
 }
 
