--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -67,4 +67,9 @@
     --primary-color: #f2725f;
     --primary-text-color: #43444e;
     --active-color: rgb(240.0838150289,93.2167630058,71.4161849711);
+
+    --textsize-small: 14px;
+    --textsize-medium: 20px;
+    --textsize-large: 36px;
+    --textsize-xlarge: 52px;
 }
