--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,6 @@ button {
 .container {
    position: absolute;
    right: 0;
-   background-color: #ffffff;
 
    @media (min-width: 500px) {
         display: none;
@@ -120,17 +119,15 @@ button {
 }
 
 .wrapper {
-    padding: 20px;
-
-
-
-
    .dropdown-menu {
-      border-radius: 0.25rem;
+      border-radius: 0 0 0 0.25rem;
       box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
       transition: all 0.2s ease;
+      opacity: 0;
+      transform: scaleY(0);
+      transform-origin: top;
+      pointer-events: none;
    }
-   
 
    .dropdown-item {
       font-family: inherit;
@@ -142,12 +139,14 @@ button {
       transition: all 0.2s ease;
 
       &:hover {
-         background-color: var(--color-dark-200);
+         background-color: gray;
       }
    }
 
-   &.is-active &-menu {
+   &.is-active .dropdown-menu {
       opacity: 1;
+      z-index: 10;
+      background-color: var(--default-white);
       transform: scaleY(1);
    }
 }
