--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ button {
       line-height: 1.5;
       padding-block: 0.75rem;
       padding-inline: 1.5rem;
-      transition: all 0.2s ease;
+      transition: all 0.2s ease-in-out;
 
       &:hover {
          background-color: gray;
