border button + more colors

--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -69,6 +69,41 @@
     --primary-text-color: #43444e;
     --active-color: rgb(240.0838150289,93.2167630058,71.4161849711);
 
+    --v-background-color: white;
+    --v-background-color-rgb: 255, 255, 255;
+    --v-foreground-color: #43444E;
+    --v-foreground-color-rgb: 67, 68, 78;
+    --v-foreground-color-light: #808080;
+    --v-border-color: rgba(67, 68, 78, 0.1);
+    --v-border-color-dark: rgba(67, 68, 78, 0.2);
+    --v-boxshadow-color: rgba(67, 68, 78, 0.1);
+    --v-logo-color: #60516E;
+    --v-background-color-light: #FAF8F5;
+    --v-background-color-light-rgb: 250, 248, 245;
+    --v-background-color-subtle: hsl(0, 0%, 96%);
+    --v-background-color-blue: hsl(200, 20%, 96%);
+    --v-highlight-color: #f2725f;
+    --v-highlight-color-rgb: 242, 114, 95;
+    --v-highlight-color-bg: #fff6f5;
+    --player-highlight: #F3A42D;
+    --player-background-color: #43444E;
+    --player-foreground-color: white;
+    --player-foreground-color-rgb: 255, 255, 255;
+    --player-contrast: hsla(0, 0%, 0%, 0.65);
+    --player-contrast-light: hsla(0, 0%, 100%, 0.3);
+    --player-progress-color: #d9dadb;
+    --player-video-background-color: transparent;
+    --player-paged-buttons-background-color: #FAF8F5;
+    --player-paged-buttons-foreground-color: #43444E;
+    --player-paged-buttons-border-color: rgba(67, 68, 78, 0.1);
+    --player-settings-highlight: #43444E;
+    --player-settings-highlight-text: white;
+    --player-settings-highlight-tabs: rgba(67, 68, 78, 0.125);
+    --player-settings-highlight-tabs-text: #43444E;
+    --player-settings-slider-background-color: rgba(67, 68, 78, 0.1);
+    --player-settings-slider-foreground-color: rgba(67, 68, 78, 0.3);
+    --player-bar-highlight-color: #EA6B24;
+
     --textsize-small: 14px;
     --textsize-medium: 20px;
     --textsize-large: 36px;
