--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,6 @@ button {
         white-space: nowrap;
         border: none;
         outline: none;
-        color: inherit;
         background: none;
     }
 
@@ -103,7 +102,7 @@ button {
         }
     }
 
-    @media (min-width: 500px) {
+    @media (min-width: 600px) {
         display: none;
     }
 }
@@ -125,6 +124,22 @@ button {
         }
     }
 
+    .border-btn {
+        border: 1px solid var(--primary-color);
+        border-radius: 6px;
+        color: var(--primary-color);
+        padding-left: 5px;
+        padding-right: 5px;
+        padding-top: 3px;
+        padding-bottom: 3px;
+        transition: all 0.3s ease;
+
+        &:hover {
+            background: var(--primary-color);
+            color: var(--default-white);
+        }
+    }
+
     .header-logo {
         display: flex;
         align-items: center;
@@ -137,7 +152,7 @@ button {
         }
     }
 
-    @media (max-width: 500px) {
+    @media (max-width: 600px) {
         display: none;
     }
 }
@@ -196,8 +211,8 @@ button {
 
 .container {
     position: relative;
-    
-    @media (min-width: 500px) {
+
+    @media (min-width: 600px) {
         display: none;
     }
 }
