#9 width op knop toegevoegd

--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,13 @@ button {
     }
     
 }
+.dropdown-item a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
 
 .wrapper .dropdown-item:hover {
     color: var(--primary-color);
