--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ button {
 
 .main-header {
     height: 3rem;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .main-nav-mobile {
