--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,13 @@
     font-family: "proxima-nova", helvetica, arial, sans-serif;
 }
 
+body {
+    background: var(--default-white);
+    color: var(--primary-text-color);
+    font-size: 16px;
+    overflow-x: hidden;
+}
+
 a {
     text-decoration: none;
     color: inherit;
@@ -61,22 +68,22 @@ button {
 }
 
 .border-btn {
-        border: 1px solid var(--primary-color);
-        border-radius: 4px;
-        color: var(--primary-color);
-        padding-left: 5px;
-        padding-right: 5px;
-        padding-top: 3px;
-        padding-bottom: 3px;
-        transition: all 0.3s ease;
+    border: 1px solid var(--primary-color);
+    border-radius: 4px;
+    color: var(--primary-color);
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    transition: all 0.3s ease;
 
-        &:hover {
-            background: var(--primary-color);
-            box-shadow: 0 4px 12px var(--v-box-shadow-color);
-            color: var(--default-white);
-            transform: translateY(-2px);
-        }
+    &:hover {
+        background: var(--primary-color);
+        box-shadow: 0 4px 12px var(--v-box-shadow-color);
+        color: var(--default-white);
+        transform: translateY(-2px);
     }
+}
 
 .convert-button {
     padding: 12px 30px;
@@ -87,15 +94,16 @@ button {
     transition: all 0.3s ease;
 
     &:hover {
-    background: var(--default-white);
-    box-shadow: 0 4px 12px var(--v-box-shadow-color);
-    color: var(--primary-color);
-    transform: translateY(-2px);
-}
+        background: var(--default-white);
+        box-shadow: 0 4px 12px var(--v-box-shadow-color);
+        color: var(--primary-color);
+        transform: translateY(-2px);
+    }
 }
 
 .save-button {
     padding: 12px 30px;
+    margin: 10px 0 0 0;
     font-size: 16px;
     border-radius: 4px;
     align-self: flex-start;
@@ -103,11 +111,11 @@ button {
     transition: all 0.3s ease;
 
     &:hover {
-    background: var(--default-white);
-    box-shadow: 0 4px 12px var(--v-box-shadow-color);
-    color: var(--primary-color);
-    transform: translateY(-2px);
-}
+        background: var(--default-white);
+        box-shadow: 0 4px 12px var(--v-box-shadow-color);
+        color: var(--primary-color);
+        transform: translateY(-2px);
+    }
 }
 
 
@@ -202,7 +210,7 @@ button {
 .hero {
     padding: min(5em, 8%);
     text-align: center;
-    
+
 }
 
 .dropdown {
@@ -214,7 +222,7 @@ button {
     display: flex;
     padding: 6px;
     color: var(--v-foreground-color);
-    
+
 }
 
 .dropdown svg {
@@ -392,7 +400,20 @@ input[type="text"]:focus {
     border: none;
     width: 100%;
     max-width: 400px;
+
+    & textarea {
+        height: auto;
+    }
+
+    & iframe {
+        width: 390px;
+        border-radius: 6px;
+        border: 2px solid var(--v-border-color-dark);
+        transform: scale(1);
+        transform-origin: top left;
+    }
 }
+
 
 .output-group label {
     font-size: 18px;
