--- a/css/style.css
+++ b/css/style.css
@@ -344,10 +344,11 @@ form {
     margin: 0 auto;
     background: var(--default-white);
     padding: 30px;
+    gap: 30px;
     border-radius: 10px;
     box-shadow: 0 4px 6px var(--v-box-shadow-color);
     display: flex;
-    gap: 50px;
+    flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
 }
@@ -410,7 +411,7 @@ input[type="text"]:focus {
 }
 
 
-.output-group {
+.output-container {
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -434,7 +435,7 @@ input[type="text"]:focus {
         border: 2px solid var(--v-border-color-dark);
         transform: scale(1);
         width: 100%;
-        height: auto;
+        height: 190px;
         max-width: 400px;
         transition: border-color 0.5s ease, transform 0.2s ease
     }
@@ -448,7 +449,7 @@ input[type="text"]:focus {
     display: block;
 }
 
-.output-display {
+/* .output-display {
     padding: 12px;
     width: 100%;
     max-width: 400px;
@@ -458,7 +459,7 @@ input[type="text"]:focus {
     border-radius: 6px;
     font-family: 'Courier New', monospace;
     line-height: 1.6;
-}
+} */
 
 .output-display:focus {
     outline: none;
